<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".Picture01">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="373dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/s" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="376dp"
        android:layout_height="383dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/a1" />

    <ImageView
        android:id="@+id/ans1"
        android:layout_width="39dp"
        android:layout_height="58dp"
        android:layout_marginBottom="168dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:srcCompat="@drawable/invisible" />

    <ImageView
        android:id="@+id/ans2"
        android:layout_width="31dp"
        android:layout_height="49dp"
        android:layout_marginTop="156dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/invisible" />

    <ImageView
        android:id="@+id/ans3"
        android:layout_width="29dp"
        android:layout_height="25dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.492"
        app:srcCompat="@drawable/invisible" />

    <ImageView
        android:id="@+id/ans4"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="132dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.445"
        app:srcCompat="@drawable/invisible" />

    <ImageView
        android:id="@+id/ans5"
        android:layout_width="28dp"
        android:layout_height="42dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="138dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/invisible" />

    <ImageView
        android:id="@+id/ans6"
        android:layout_width="27dp"
        android:layout_height="33dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="138dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.518"
        app:srcCompat="@drawable/invisible" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="98dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/scoreCount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="39dp"
        android:layout_height="27dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="73dp"
        android:layout_height="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/clock" />

    <Button
        android:id="@+id/finishbtn"
        android:layout_width="190dp"
        android:layout_height="52dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="@color/primary"
        android:text="@string/finshBtn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>